@@ -7,6 +7,8 @@ version 0.49:
 	* Updated Korean translation (thanks Ho-seok Lee, also for
 	  resized ICQ icons)
 	* Updated Dutch translation (thanks Floris Eshuis)
+	* Zephyr updates (thanks Arun A Tharuvai)
+	* Gadu-Gadu updates (thanks Arkadiusz Miskiewicz)
 	* Option to show aliases in conversation tabs
 	* Option to hide windows after sending messages
 	* licq2gaim.pl conversion script (thanks Arturo Cisneros, Jr.)
